[package]
name = "glue"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
crc = "3.2.1"
serialport = "4.3.0"
zerocopy = "0.7.34"
zerocopy-derive = "0.7.34"
chrono = "0.4.31"

[build-dependencies]
bindgen = "0.69.4"
