[package]
name = "glue"
version = "0.7.9"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-traits = "0.2"
num-derive = "0.4"
crc = "3.2.1"
serialport = "4.3.0"
zerocopy = "0.8.39"
zerocopy-derive = "0.8.39"
chrono = "0.4.31"
strum = "0.26"
strum_macros = "0.26"
ring-channel = "0.12.0"

[build-dependencies]
bindgen = "0.69.4"
